--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -3,7 +3,12 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v2
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
+      env:
+          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+          NOTION_SPACE_ID: ${{ secrets.NOTION_SPACE_ID }}
+          NOTION_USER_ID: ${{ secrets.NOTION_USER_ID }}
